--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <li><a href="https://nektar1n.github.io/myCalculator/" target="_blank">Calculator on vue js</a></li>
             <li><a href="https://github.com/Nektar1n/myPizzaMagazine" target="_blank">Сайт на vue js</a></li>
             <li><a href="https://github.com/Nektar1n/myPizzaMagazine" target="_blank">Pizza magazine on vue js</a></li>
-            <li><a href="https://github.com/Nektar1n/crypton" target="_blank">Трекер для отслеживания криптовалют на vue js</a></li>
+            <li><a href="https://github.com/Nektar1n/cryptonomicon" target="_blank">Трекер для отслеживания криптовалют на vue js</a></li>
         </ol>
     </div>
 
