--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <img src="image.jpeg"  alt="тут моя фотка" class="avatar" >
     <div class="info-text">
     <h1>Высокий Никита Алексеевич</h1>
-                <p> Я junior <strong>фронтенд</strong> разработчик</p>
-                <p> Я люблю работать с фронтенд. Знаю html5,css,javaScript. Умею работать с vue3, figma. Есть знание sql запросов. Раньше работал на java.
+                <p> junior <strong>fullstack</strong> разработчик</p>
+                <p>  Знаю html5,css,javaScript. Умею работать с vue3, figma. Есть знание sql запросов. Раньше работал на java.
                     Из других навыков умею работать с adobe premier pro и adobe after effects. Есть опыт работы с ableton live 10.</p>
 
              <h4>Мои социальные сети</h4>
@@ -69,15 +69,12 @@
     <div class="card bg-red">
         <h2>Мои проекты на javaScript и vue js</h2>
         <ol class="list">
+            <li><a href="https://nektar1n.github.io/MyNftPage/" target="_blank">Сайт по анонсам и рекламе NFT, которые скоро выйдут на marketplace. В данный момент пишу бэкэнд и реализую поиск коллекции nft по названию</a></li>
+            <li><a href="https://github.com/Nektar1n/cryptonomicon" target="_blank">Трекер для отслеживания криптовалют на vue js</a></li>
             <li><a href="https://nektar1n.github.io/firstProject/" target="_blank">Slider pages</a></li>
             <li><a href="https://nektar1n.github.io/second-project/" target="_blank">Vertical slider pages</a></li>
-            <li><a href="https://nektar1n.github.io/third-project/" target="_blank">Hover board</a></li>
-            <li><a href="https://nektar1n.github.io/aim-game/" target="_blank">Aim game</a></li>
             <li><a href="https://nektar1n.github.io/vuetrafficlightsimulator/" target="_blank">Traffic light on vue js</a></li>
             <li><a href="https://nektar1n.github.io/myCalculator/" target="_blank">Calculator on vue js</a></li>
-            <li><a href="https://github.com/Nektar1n/myPizzaMagazine" target="_blank">Сайт на vue js</a></li>
-            <li><a href="https://github.com/Nektar1n/myPizzaMagazine" target="_blank">Pizza magazine on vue js</a></li>
-            <li><a href="https://github.com/Nektar1n/cryptonomicon" target="_blank">Трекер для отслеживания криптовалют на vue js</a></li>
         </ol>
     </div>
 
