--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-<!--<h1>Hello world</h1>-->
-<!--<hr size="10" noshade color="orange" />-->
-<!--<h3>this is</h3>-->
-<!--&lt;!&ndash;<br/>&ndash;&gt;-->
-
-<!--<p>random text</p>-->
-
 <!doctype html>
 <html>
 <head>
@@ -13,64 +6,64 @@
     <link href="styles.css" rel="stylesheet" >
 </head>
 <body><div class="container">
-<div class="info">
-    <img src="image.jpeg"  alt="тут моя фотка" class="avatar" >
-    <div class="info-text">
-    <h1>Высокий Никита Алексеевич</h1>
-                <p> junior <strong>fullstack</strong> разработчик</p>
-                <p>  Знаю html5,css,javaScript. Умею работать с vue3, figma. Есть знание sql запросов. Раньше работал на java.
-                    Из других навыков умею работать с adobe premier pro и adobe after effects. Есть опыт работы с ableton live 10.</p>
-
-             <h4>Мои социальные сети</h4>
-
+    <div class="info">
+        <img src="myphoto.jpeg"  alt="тут моя фотка" class="avatar" >
+        <div class="info-text">
+            <h1>Высокий Никита Алексеевич</h1>
+            <p> junior <strong>fullstack</strong> разработчик</p>
+            <p>Знаю html,css,javaScript. Умею работать с vue, node js, react, figma на базовом уровне. Есть знание sql, знаком с postgresql, mysql. Раньше работал на java.
+                Из других навыков умею работать с adobe premier pro и adobe after effects. Есть опыт работы с ableton live 10.</p>
+            <h4>Мои социальные сети</h4>
             <a href="https://vk.com/nvysotskiy" target="_blank">Вконтакте</a>
-    |
+            |
             <a href="https://t.me/Nikitosimus" target="_blank">Телеграмм</a>
-    </div>
+        </div>
 
-</div>
+    </div>
     <hr>
 
-<!--<div class="card bg-yellow">-->
-<!--    <h2>Опыт коммерческой разработки</h2>-->
-<!--    <table class="table" >-->
-<!--        <thead>-->
-<!--        </thead>-->
-<!--        <tbody>-->
-<!--        <tr>-->
-<!--            <td>МИРЭА</td>-->
-<!--            <td>оптимизация лаболаторных работ на c++</td>-->
-<!--            <td>2020 </td>-->
-<!--        </tr>-->
+    <!--<div class="card bg-yellow">-->
+    <!--    <h2>Опыт коммерческой разработки</h2>-->
+    <!--    <table class="table" >-->
+    <!--        <thead>-->
+    <!--        </thead>-->
+    <!--        <tbody>-->
+    <!--        <tr>-->
+    <!--            <td>МИРЭА</td>-->
+    <!--            <td>оптимизация лаболаторных работ на c++</td>-->
+    <!--            <td>2020 </td>-->
+    <!--        </tr>-->
 
-<!--        <tr>-->
-<!--            <td>МИРЭА</td>-->
-<!--            <td>опыт разработки программируемой эллектроники</td>-->
-<!--            <td>2021 </td>-->
-<!--        </tr>-->
-<!--        </tbody>-->
+    <!--        <tr>-->
+    <!--            <td>МИРЭА</td>-->
+    <!--            <td>опыт разработки программируемой эллектроники</td>-->
+    <!--            <td>2021 </td>-->
+    <!--        </tr>-->
+    <!--        </tbody>-->
 
-<!--    </table>-->
-<!--</div>-->
-
-
+    <!--    </table>-->
+    <!--</div>-->
 
 
-<div class="card bg-green">
-    <h2>Мои хобби</h2>
-    <ol class="list">
-        <li>программирование</li>
-        <li>музыка</li>
-        <li>инвестиции</li>
-        <li>монтаж видео</li>
-    </ol>
-</div>
+
+
+<!--    <div class="card bg-green">-->
+<!--        <h2>Мои хобби</h2>-->
+<!--        <ol class="list">-->
+<!--            <li>программирование</li>-->
+<!--            <li>музыка</li>-->
+<!--            <li>инвестиции</li>-->
+<!--            <li>монтаж видео</li>-->
+<!--        </ol>-->
+<!--    </div>-->
 
     <div class="card bg-red">
         <h2>Мои проекты на javaScript и vue js</h2>
         <ol class="list">
-            <li><a href="https://nektar1n.github.io/MyNftPage/" target="_blank">Сайт по анонсам и рекламе NFT, которые скоро выйдут на marketplace. В данный момент пишу бэкэнд и реализую поиск коллекции nft по названию</a></li>
-            <li><a href="https://github.com/Nektar1n/cryptonomicon" target="_blank">Трекер для отслеживания криптовалют на vue js</a></li>
+            <li><a href="https://nektar1n.github.io/MyNftPage/" target="_blank">Лэндинг по анонсам и рекламе NFT</a>
+                <span>, которые скоро выйдут на marketplace.Присутствует адаптивное меню-бургер для мобильных устройств. В данный момент пишу бэкэнд и реализую поиск коллекции nft по названию</span></li>
+            <li><a href="https://github.com/Nektar1n/cryptonomicon" target="_blank">SPA для отслеживания валют на vue js</a>
+            <span> с возможностью добавлять карточки с текущей ценой валюты в реальном времени, при клике на карточку строится график изменении цены данной валюты </span></li>
             <li><a href="https://nektar1n.github.io/firstProject/" target="_blank">Slider pages</a></li>
             <li><a href="https://nektar1n.github.io/second-project/" target="_blank">Vertical slider pages</a></li>
             <li><a href="https://nektar1n.github.io/vuetrafficlightsimulator/" target="_blank">Traffic light on vue js</a></li>
@@ -81,41 +74,33 @@
 
 
     <div class="card bg-yellow">
-    <h2>Мои монтаж-видео на youtube</h2>
-    <ul class="link-list">
-        <li>
-        <a href="https://www.youtube.com/watch?v=-VHMpR3u5-o" target="_blank">Первое видео</a>
-        </li>
-        <li>
-            <a href="https://www.youtube.com/watch?v=G3-qvmsalVg" target="_blank">Второе видео</a>
-        </li>
-    </ul>
-</div>
+        <a href="https://github.com/Nektar1n" target="_blank"><h2>Профиль на github</h2></a>
+    </div>
 
-<!--    <div class="contact">-->
-<!--        <h2>Связаться со мной</h2>-->
+    <!--    <div class="contact">-->
+    <!--        <h2>Связаться со мной</h2>-->
 
-<!--        <form action="/">-->
-<!--            <div class="row">-->
-<!--                <div class="form-group">-->
-<!--                <label for="name">Ваше имя</label>-->
-<!--                <input type="text" id="name" placeholder="Введите имя">-->
-<!--                </div>-->
-<!--                <div class="form-group">-->
-<!--                <label for="email">Ваш email</label>-->
-<!--                <input type="email" id="email" placeholder="Введите email">-->
-<!--                </div>-->
-<!--        </div>-->
+    <!--        <form action="/">-->
+    <!--            <div class="row">-->
+    <!--                <div class="form-group">-->
+    <!--                <label for="name">Ваше имя</label>-->
+    <!--                <input type="text" id="name" placeholder="Введите имя">-->
+    <!--                </div>-->
+    <!--                <div class="form-group">-->
+    <!--                <label for="email">Ваш email</label>-->
+    <!--                <input type="email" id="email" placeholder="Введите email">-->
+    <!--                </div>-->
+    <!--        </div>-->
 
-<!--            <div class="form-group">-->
-<!--            <label for="text">Ваш текст</label>-->
-<!--            <textarea name="" id="text" cols="30" rows="10"></textarea>-->
-<!--            </div>-->
-<!--            <input class="btn" type="submit" value="Связаться">-->
+    <!--            <div class="form-group">-->
+    <!--            <label for="text">Ваш текст</label>-->
+    <!--            <textarea name="" id="text" cols="30" rows="10"></textarea>-->
+    <!--            </div>-->
+    <!--            <input class="btn" type="submit" value="Связаться">-->
 
-<!--        </form>-->
+    <!--        </form>-->
 
-<!--    </div>-->
+    <!--    </div>-->
     <div class="position">
         <div class="box"></div>
     </div>
