--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="info-text">
             <h1>Высокий Никита Алексеевич</h1>
             <p> junior <strong>fullstack</strong> разработчик</p>
-            <p>Знаю html,css,javaScript. Умею работать с vue, node js, react, figma на базовом уровне. Есть знание sql, знаком с postgresql, mysql. Раньше работал на java.
-                Из других навыков умею работать с adobe premier pro и adobe after effects. Есть опыт работы с ableton live 10.</p>
+            <p>Знаю html, css, javaScript. Умею работать с vue (vuex, vue-router). Знаком с node js, react, figma, java на базовом уровне. Есть знание sql, знаком с postgresql, mysql.
+                Из других навыков умение работать с adobe premier pro и adobe after effects. Есть опыт работы с ableton live 10.</p>
             <h4>Мои социальные сети</h4>
             <a href="https://vk.com/nvysotskiy" target="_blank">Вконтакте</a>
             |
@@ -47,27 +47,37 @@
 
 
 
-<!--    <div class="card bg-green">-->
-<!--        <h2>Мои хобби</h2>-->
-<!--        <ol class="list">-->
-<!--            <li>программирование</li>-->
-<!--            <li>музыка</li>-->
-<!--            <li>инвестиции</li>-->
-<!--            <li>монтаж видео</li>-->
-<!--        </ol>-->
-<!--    </div>-->
+    <div class="card bg-green">
+        <h2>Высшее образование</h2>
+        <ol class="list">
+            <li>Оконченное высшее образование. Сроки обучения (1.09.2016-1.02.2022).
+                Московский государственный технический университет радиотехники, электроники и автоматики, Москва.(РТУ МИРЭА)
+                ИРИ (институт радиоэлектроники и информатики).
+            </li>
+        </ol>
+    </div>
 
     <div class="card bg-red">
-        <h2>Мои проекты на javaScript и vue js</h2>
+        <h2>Мои проекты на javaScript и vue js:</h2>
         <ol class="list">
             <li><a href="https://nektar1n.github.io/MyNftPage/" target="_blank">Лэндинг по анонсам и рекламе NFT</a>
-                <span>, которые скоро выйдут на marketplace.Присутствует адаптивное меню-бургер для мобильных устройств. В данный момент пишу бэкэнд и реализую поиск коллекции nft по названию</span></li>
+                <span>, которые скоро выйдут на marketplace.Присутствует адаптивное меню-бургер для мобильных устройств.</span></li>
             <li><a href="https://github.com/Nektar1n/cryptonomicon" target="_blank">SPA для отслеживания валют на vue js</a>
-            <span> с возможностью добавлять карточки с текущей ценой валюты в реальном времени, при клике на карточку строится график изменении цены данной валюты </span></li>
-            <li><a href="https://nektar1n.github.io/firstProject/" target="_blank">Slider pages</a></li>
-            <li><a href="https://nektar1n.github.io/second-project/" target="_blank">Vertical slider pages</a></li>
-            <li><a href="https://nektar1n.github.io/vuetrafficlightsimulator/" target="_blank">Traffic light on vue js</a></li>
-            <li><a href="https://nektar1n.github.io/myCalculator/" target="_blank">Calculator on vue js</a></li>
+            <span> с возможностью добавлять карточки с текущей ценой валюты в реальном времени, при клике на неё строится график изменении цены данной валюты; </span></li>
+            <li><a href="https://nektar1n.github.io/firstProject/" target="_blank">Slider pages</a>;</li>
+            <li><a href="https://nektar1n.github.io/second-project/" target="_blank">Vertical slider pages</a>;</li>
+            <li><a href="https://nektar1n.github.io/vuetrafficlightsimulator/" target="_blank">Traffic light on vue js</a>;</li>
+            <li><a href="https://nektar1n.github.io/myCalculator/" target="_blank">Calculator on vue js</a>;</li>
+        </ol>
+    </div>
+    <div class="card bg-green">
+        <h2>Личные качества:</h2>
+        <ol class="list">
+            <li>Высокая обучаемость;</li>
+            <li>Нацеленность на результат;</li>
+            <li>Терпеливость;</li>
+            <li>Аккуратность;</li>
+            <li>Стрессоустойчивость;</li>
         </ol>
     </div>
 
@@ -106,7 +116,7 @@
     </div>
     <div style="margin-bottom: 300px;;"></div>
 </div>
-    <script src="app.js">
+<script src="app.js">
 </script>
 </body>
 </html>
