--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <img src="myphoto.jpeg"  alt="тут моя фотка" class="avatar" >
         <div class="info-text">
             <h1>Высокий Никита Алексеевич</h1>
-            <p> junior <strong>fullstack</strong> разработчик</p>
+            <p> junior <strong>frontend</strong> разработчик</p>
             <p>Знаю html, css, javaScript. Умею работать с vue (vuex, vue-router). Знаком с node js, react, figma, java на базовом уровне. Есть знание sql, знаком с postgresql, mysql.
                 Из других навыков умение работать с adobe premier pro и adobe after effects. Есть опыт работы с ableton live 10.</p>
             <h4>Мои социальные сети</h4>
