--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="info-text">
             <h1>Высокий Никита Алексеевич</h1>
             <p> junior <strong>frontend</strong> разработчик</p>
-            <p>Знаю html, css, javaScript. Умею работать с vue (vuex, vue-router). Знаком с node js, react, figma, java на базовом уровне. Есть знание sql, знаком с postgresql, mysql.
+            <p>Html, css, javaScript. Умение работать с vue (vuex, vue-router). node js, react, figma, java на базовом уровне. Знание sql, postgresql, mysql.
                 Из других навыков умение работать с adobe premier pro и adobe after effects. Есть опыт работы с ableton live 10.</p>
             <h4>Мои социальные сети</h4>
             <a href="https://vk.com/nvysotskiy" target="_blank">Вконтакте</a>
@@ -58,7 +58,7 @@
     </div>
 
     <div class="card bg-red">
-        <h2>Мои проекты на javaScript и vue js:</h2>
+        <h2>Мои проекты:</h2>
         <ol class="list">
             <li><a href="https://nektar1n.github.io/MyNftPage/" target="_blank">Лэндинг по анонсам и рекламе NFT</a>
                 <span>, которые скоро выйдут на marketplace.Присутствует адаптивное меню-бургер для мобильных устройств.</span></li>
