--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="info-text">
             <h1>Высокий Никита Алексеевич</h1>
             <p> junior <strong>frontend</strong> разработчик</p>
-            <p>Html, css, javaScript. Умение работать с vue (vuex, vue-router). node js, react, figma, java на базовом уровне. Знание sql, postgresql, mysql.
+            <p><strong>Навыки:</strong> Html, css, javaScript. Умение работать с vue (vuex, vue-router). node js, react, figma, java на базовом уровне. Знание sql, postgresql, mysql.
                 Из других навыков умение работать с adobe premier pro и adobe after effects. Есть опыт работы с ableton live 10.</p>
             <h4>Мои социальные сети</h4>
             <a href="https://vk.com/nvysotskiy" target="_blank">Вконтакте</a>
