--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <span> с возможностью добавлять карточки с текущей ценой валюты в реальном времени, при клике на неё строится график изменении цены данной валюты; </span></li>
             <li><a href="https://nektar1n.github.io/firstProject/" target="_blank">Slider pages</a>;</li>
             <li><a href="https://nektar1n.github.io/second-project/" target="_blank">Vertical slider pages</a>;</li>
+            <li><a href=""https://github.com/Nektar1n/Colour-square"" target="_blank">List colour square on vue js</a>;</li>
             <li><a href="https://nektar1n.github.io/vuetrafficlightsimulator/" target="_blank">Traffic light on vue js</a>;</li>
             <li><a href="https://nektar1n.github.io/myCalculator/" target="_blank">Calculator on vue js</a>;</li>
         </ol>
