--- a/index.html
+++ b/index.html
@@ -61,14 +61,15 @@
         <h2>Мои проекты:</h2>
         <ol class="list">
             <li><a href="https://nektar1n.github.io/MyNftPage/" target="_blank">Лэндинг по анонсам и рекламе NFT</a>
-                <span>, которые скоро выйдут на marketplace.Присутствует адаптивное меню-бургер для мобильных устройств.</span></li>
+                <span>, которые скоро выйдут на marketplace.Присутствует адаптивное menu-burger для мобильных устройств.</span></li>
             <li><a href="https://github.com/Nektar1n/cryptonomicon" target="_blank">SPA для отслеживания валют на vue js</a>
-            <span> с возможностью добавлять карточки с текущей ценой валюты в реальном времени, при клике на неё строится график изменении цены данной валюты; </span></li>
+            <span> с возможностью добавлять карточки с текущей ценой валюты в реальном времени, при клике по карточке строится график изменения цены данной валюты; </span></li>
             <li><a href="https://nektar1n.github.io/firstProject/" target="_blank">Slider pages</a>;</li>
             <li><a href="https://nektar1n.github.io/second-project/" target="_blank">Vertical slider pages</a>;</li>
             <li><a href=""https://github.com/Nektar1n/Colour-square"" target="_blank">List colour square on vue js</a>;</li>
             <li><a href="https://nektar1n.github.io/vuetrafficlightsimulator/" target="_blank">Traffic light on vue js</a>;</li>
             <li><a href="https://nektar1n.github.io/myCalculator/" target="_blank">Calculator on vue js</a>;</li>
+            <li><a href="https://github.com/Nektar1n/UsersList" target="_blank">SPA on Vue js. contains these tools: Vuex, vue-router</a>.</li>
         </ol>
     </div>
     <div class="card bg-green">
