--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <li><a href=""https://github.com/Nektar1n/Colour-square"" target="_blank">List colour square on vue js</a>;</li>
             <li><a href="https://nektar1n.github.io/vuetrafficlightsimulator/" target="_blank">Traffic light on vue js</a>;</li>
             <li><a href="https://nektar1n.github.io/myCalculator/" target="_blank">Calculator on vue js</a>;</li>
-            <li><a href="https://github.com/Nektar1n/UsersList" target="_blank">SPA on Vue js. contains these tools: Vuex, vue-router</a>.</li>
+            <li><a href="https://github.com/Nektar1n/UsersList" target="_blank">SPA on Vue js. Сontains these tools: Vuex, vue-router</a>.</li>
         </ol>
     </div>
     <div class="card bg-green">
