--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <ol class="list">
             <li><a href="https://nektar1n.github.io/MyNftPage/" target="_blank">Лэндинг по анонсам и рекламе NFT</a>
                 <span>, которые скоро выйдут на marketplace.Присутствует адаптивное menu-burger для мобильных устройств.</span></li>
-            <li><a href="https://github.com/Nektar1n/cryptonomicon" target="_blank">SPA для отслеживания валют на vue js</a>
+            <li><a href="https://github.com/Nektar1n/cryptonomicon" target="_blank">SPA для отслеживания курса валюты на vue js</a>
             <span> с возможностью добавлять карточки с текущей ценой валюты в реальном времени, при клике по карточке строится график изменения цены данной валюты; </span></li>
             <li><a href="https://nektar1n.github.io/firstProject/" target="_blank">Slider pages</a>;</li>
             <li><a href="https://nektar1n.github.io/second-project/" target="_blank">Vertical slider pages</a>;</li>
