--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body><div class="container">
     <div class="info">
-        <img src="myphoto.jpeg"  alt="тут моя фотка" class="avatar" >
+        <img src="myphotobest.jpeg"  alt="тут моя фотка" class="avatar" >
         <div class="info-text">
             <h1>Высокий Никита Алексеевич</h1>
             <p> junior <strong>frontend</strong> разработчик</p>
@@ -49,12 +49,12 @@
 
     <div class="card bg-green">
         <h2>Высшее образование</h2>
-        <ol class="list">
+        <ul class="list">
             <li>Оконченное высшее образование. Сроки обучения (1.09.2016-1.02.2022).
                 Московский государственный технический университет радиотехники, электроники и автоматики, Москва.(РТУ МИРЭА)
                 ИРИ (институт радиоэлектроники и информатики).
             </li>
-        </ol>
+        </ul>
     </div>
 
     <div class="card bg-red">
@@ -69,7 +69,7 @@
             <li><a href="https://nektar1n.github.io/myCalculator/" target="_blank">Calculator on vue js</a>;</li>
             <li><a href="https://github.com/Nektar1n/UsersList" target="_blank">SPA on Vue js. Сontains these tools: Vuex, vue-router</a>.</li>
             <li><a href="https://github.com/Nektar1n/cryptonomicon" target="_blank">SPA для отслеживания курса валюты на vue js</a>
-            <span> с возможностью добавлять карточки с текущей ценой валюты в реальном времени, при клике по карточке строится график изменения цены данной валюты; </span></li>
+                <span> с возможностью добавлять карточки с текущей ценой валюты в реальном времени, при клике по карточке строится график изменения цены данной валюты; </span></li>
         </ol>
     </div>
     <div class="card bg-green">
