--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body><div class="container">
     <div class="info">
-        <img src="myphotobest.jpeg"  alt="тут моя фотка" class="avatar" >
+        <img src="img_1.png"  alt="тут моя фотка" class="avatar" >
         <div class="info-text">
             <h1>Высокий Никита Алексеевич</h1>
             <p> junior <strong>frontend</strong> разработчик</p>
