--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <img src="myphotobest.jpeg"  alt="тут моя фотка" class="avatar" >
         <div class="info-text">
             <h1>Высокий Никита Алексеевич</h1>
-            <p> junior <strong>frontend</strong> разработчик</p>
+            <p> <strong>Frontend</strong> разработчик</p>
             <p><strong>Навыки:</strong> Html, css, javaScript. Умение работать с vue (vuex, vue-router). node js, react, figma, java на базовом уровне. Знание sql, postgresql, mysql.
                 Из других навыков умение работать с adobe premier pro и adobe after effects. Есть опыт работы с ableton live 10.</p>
             <h4>Мои социальные сети</h4>
-            <a href="https://vk.com/nvysotskiy" target="_blank">Вконтакте</a>
+            <a href="https://vk.com/nvysotskiy" class="social" target="_blank">Вконтакте</a>
             |
-            <a href="https://t.me/Nikitosimus" target="_blank">Телеграмм</a>
+            <a href="https://t.me/Nikitosimus" class="social" target="_blank">Телеграмм</a>
         </div>
 
     </div>
@@ -64,7 +64,7 @@
                 <span>, которые скоро выйдут на marketplace.Присутствует адаптивное menu-burger для мобильных устройств.</span></li>
             <li><a href="https://nektar1n.github.io/firstProject/" target="_blank">Slider pages</a>;</li>
             <li><a href="https://nektar1n.github.io/second-project/" target="_blank">Vertical slider pages</a>;</li>
-            <li><a href=""https://github.com/Nektar1n/Colour-square"" target="_blank">List colour square on vue js</a>;</li>
+            <li><a href="https://github.com/Nektar1n/Colour-square" target="_blank">List colour square on vue js</a>;</li>
             <li><a href="https://nektar1n.github.io/vuetrafficlightsimulator/" target="_blank">Traffic light on vue js</a>;</li>
             <li><a href="https://nektar1n.github.io/myCalculator/" target="_blank">Calculator on vue js</a>;</li>
             <li><a href="https://github.com/Nektar1n/UsersList" target="_blank">SPA on Vue js. Сontains these tools: Vuex, vue-router</a>.</li>
