add favorite work

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <li><a href="https://github.com/Nektar1n/Colour-square" target="_blank">List colour square on vue js</a>;</li>
             <li><a href="https://nektar1n.github.io/vuetrafficlightsimulator/" target="_blank">Traffic light on vue js</a>;</li>
             <li><a href="https://nektar1n.github.io/myCalculator/" target="_blank">Calculator on vue js</a>;</li>
-            <li><a href="https://github.com/Nektar1n/UsersList" target="_blank">SPA on Vue js. Сontains these tools: Vuex, vue-router</a>.</li>
+            <li><a href="https://github.com/Nektar1n/favorite-zadanie" target="_blank">SPA on Vue js. Сontains these tools: Vuex, vue-router, localStorage, Vue transition</a>.</li>
             <li><a href="https://github.com/Nektar1n/cryptonomicon" target="_blank">SPA для отслеживания курса валюты на vue js</a>
                 <span> с возможностью добавлять карточки с текущей ценой валюты в реальном времени, при клике по карточке строится график изменения цены данной валюты; </span></li>
         </ol>
