--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <div class="card bg-red">
         <h2>Мои проекты:</h2>
         <ol class="list">
+            <li><a href="https://github.com/Nektar1n/myChatOnWebSocket/" target="_blank">Чат на nuxt js.</a><span>(Socket io, vuetify, vuex, vue-router, express)</span>
             <li><a href="https://nektar1n.github.io/MyNftPage/" target="_blank">Лэндинг по анонсам и рекламе NFT</a>
                 <span>, которые скоро выйдут на marketplace.Присутствует адаптивное menu-burger для мобильных устройств.</span></li>
             <li><a href="https://nektar1n.github.io/firstProject/" target="_blank">Slider pages</a>;</li>
