--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             <li><a href="https://nektar1n.github.io/vuetrafficlightsimulator/" target="_blank">Traffic light on vue js</a>;</li>
             <li><a href="https://nektar1n.github.io/myCalculator/" target="_blank">Calculator on vue js</a>;</li>
             <li><a href="https://github.com/Nektar1n/favorite-zadanie" target="_blank">SPA on Vue js. Сontains these tools: Vuex, vue-router, localStorage, Vue transition</a>.</li>
-            <li><a href="https://github.com/Nektar1n/cryptonomicon" target="_blank">SPA для отслеживания курса валюты на vue js</a>
-                <span> с возможностью добавлять карточки с текущей ценой валюты в реальном времени, при клике по карточке строится график изменения цены данной валюты; </span></li>
+            <li><a href="https://github.com/Nektar1n/crmSystem" target="_blank">CRM on NUXT.js</a>.</li>
+          
         </ol>
     </div>
     <div class="card bg-green">
